--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,24 +1,57 @@
 
 * {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Century Gothic", sans-serif;
+}
+
+table {
+  table-layout: fixed;
+  width: 800px;
+  height: 400px;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 5px;
 }
 
 h1 {
-  color: khaki;
+  color: black;
   background-image: url('pattern.webp');
-  font-size: 100px;
+  font-size: 50px;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
 }
 
 h2 {
-  color: white;
   font-size: 32px;
   font-weight: bold;
+  color: black;
 }
 
-#brushes_title {
-  background-color: mediumspringgreen;
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.weeks_list {
+  margin-top: 10px;
+}
+
+#title_tr {
+  background-color: Azure;
+}
+
+#chemistry {
+    margin-left: 17px;
+}
+
+#title_background {
+  background-color: Aqua;
+  color: blue;
 }
 
 #blue_text {
