--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,6 @@
 
 * {
-  font-family: "Century Gothic", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 table {
@@ -16,6 +16,11 @@ table, th, td {
 
 th, td {
   padding: 5px;
+}
+
+.form-element label {
+    display: inline-block;
+    width: 150px;
 }
 
 h1 {
@@ -37,6 +42,18 @@ p {
   margin-bottom: 10px;
 }
 
+.center {
+  text-align: center;
+}
+
+.qanswer {
+  background-color: #f8f8f8;
+  width: 80%;
+  resize: none;
+  height: 100px;
+  box-sizing: border-box;
+}
+
 .weeks_list {
   margin-top: 10px;
 }
@@ -54,8 +71,8 @@ p {
 }
 
 #title_background {
-  background-color: Aqua;
-  color: blue;
+  background-color: Beige;
+  color: DodgerBlue;
 }
 
 #blue_text {
